# back-end/swagger_output.json
@@ -62,6 +62,28 @@
           }
         }
       }
+    },
+    "/cnpj/": {
+      "get": {
+        "tags": [],
+        "description": "Endpoint para consultar CNPJ na receita",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "cnpj",
+            "in": "query",
+            "type": "string",
+            "description": "CNPJ",
+            "required": true
+          }
+        ],
+        "responses": {}
+      }
     }
   },
   "definitions": {}
